# noe

./: LICENSE  Makefile  README.md  THREAT_MODEL.md  generate_demo_artifact.py  noe_validator.py  pyproject.toml  requirements.txt  run_demo.sh  test_chain_canonicalization.py  tests:test_certificate_replay.py
benchmarks/: bridge_overhead.py  noe_benchmark_testing.py
docs/: error_codes.md  grounding_layer_walkthrough.md  ros2_integration_example.md
examples/: 01_stop_if_human_present.md  02_sensor_drift_audit.md  README.md  determinism_proof.py  robot_guard_demo.py
examples/auditor_demo/: README.md  verify_hallucination.py  verify_multi_agent.py  verify_shipment.py  verify_shipment_stale.py  verify_shipment_uncertain.py
noe/: __init__.py  canonical.py  context_manager.py  context_projection.py  context_requirements.py  hysteresis_adapter.py  noe_parser.py  noe_runtime.py  noe_validator.py  numeric_quantization.py  operator_lexicon.py  provenance.py  registry.json  tokenize.py
scripts/: demo.sh  verify_release_gate.sh
tests/: fuzz_noe.py  test_batch2_fixes.py  test_canonical_json.py  test_concurrency.py  test_context_canonicalization.py  test_hashing_invariants.py  test_provenance_action_hash.py  test_runtime_blockers.py  test_safety_integration.py  test_safety_kernel_invariants.py  test_spatial_operators.py  test_strict_actions.py  test_strict_validation_context_incomplete.py  test_v1_0_verification.py  v1_regr_provenance.py
tests/adversarial/: README.md  red_team_audit.py  test_adversarial_correctness.py  (+2 more)
tools/: benchmark_latency.py  generate_manifest.py
(+21 files in other folders)
